# flight-gateway-api

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.yaml  main.py  pyproject.toml
ai_codex/: PLAN.md
alembic/: env.py
alembic/versions/: 20260423_0001_legacy_booking_chain_bridge.py  20260424_01_create_bookings_table.py  20260424_02_drop_unused_booking_columns.py
app/: bootstrap.py
app/application/common/: constant.py  legacy_normalization.py  pagination.py  upstream_errors.py
app/application/use_cases/: create_booking.py  get_booking.py  get_health_status.py  get_offer_detail.py  list_bookings.py  list_flights.py
app/domain/ports/: booking_repository.py  flight_repository.py  health_repository.py
app/entrypoints/api/: __init__.py  decorators.py  dependencies.py
app/infrastructure/: lifecycle.py
app/infrastructure/airlines/: __init__.py  catalog.py
app/infrastructure/apicall/: __init__.py  base.py  flight_search.py
app/infrastructure/cache/: booking_rate_limit.py  flight.py  redis.py
app/infrastructure/config/: settings.py
app/infrastructure/data/: airlines.json
tests/: test_airline_catalog.py  test_alembic_config.py  test_booking_create_errors.py  test_booking_create_rate_limit.py  test_booking_create_schema.py  test_booking_openapi.py  test_create_booking_use_case.py  test_get_booking_use_case.py  test_get_offer_detail_use_case.py  test_list_bookings_use_case.py  test_list_flights_airlines.py  test_list_flights_schema.py  test_list_flights_trip_groups.py  test_system_routes_removed.py
(+31 files in other folders)
