[tool.poetry]
name = "flight-gateway-api"
version = "0.1.0"
description = "Flight gateway API scaffold with hexagonal architecture"
authors = ["quang181 <quangnm1@bizflycloud.vn>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = { version = "^0.35.0", extras = ["standard"] }
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
psycopg = { version = "^3.2.9", extras = ["binary"] }
redis = "^6.4.0"
pydantic-settings = "^2.10.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
